Fixing SonarQube findings.